--- a/prosody.cfg.lua.dist
+++ b/prosody.cfg.lua.dist
@@ -183,6 +183,9 @@ log = {
 -- Location of directory to find certificates in (relative to main config file):
 certificates = "certs"
 
+-- HTTPS currently only supports a single certificate, specify it here:
+--https_certificate = "certs/localhost.crt"
+
 ----------- Virtual hosts -----------
 -- You need to add a VirtualHost entry for each domain you wish Prosody to serve.
 -- Settings under each VirtualHost entry apply *only* to that host.
