prosody.cfg.lua.dist: Remove mention of syslog near mod_posix
The syslog sink was moved out of mod_posix into core.loggingmanager in 1460c4966262
See #541

--- a/prosody.cfg.lua.dist
+++ b/prosody.cfg.lua.dist
@@ -92,7 +92,7 @@ modules_disabled = {
 	-- "offline"; -- Store offline messages
 	-- "c2s"; -- Handle client connections
 	-- "s2s"; -- Handle server-to-server connections
-	-- "posix"; -- POSIX functionality, sends server to background, enables syslog, etc.
+	-- "posix"; -- POSIX functionality, sends server to background, etc.
 }
 
 -- Disable account creation by default, for security
