configure: Pass compiler flag to enable ICU only when building util.encodings
Passing it in CFLAGS applied to all modules, which was not needed.

--- a/util-src/GNUmakefile
+++ b/util-src/GNUmakefile
@@ -24,6 +24,7 @@ install: $(ALL)
 clean:
 	rm -f $(ALL) $(patsubst %.so,%.o,$(ALL))
 
+encodings.o: CFLAGS+=$(IDNA_FLAGS)
 encodings.so: LDLIBS+=$(IDNA_LIBS)
 
 hashes.so: LDLIBS+=$(OPENSSL_LIBS)
