editorconfig: Specify max line length to match luacheck settings

--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,7 @@ end_of_line = lf
 indent_style = tab
 insert_final_newline = true
 trim_trailing_whitespace = true
+max_line_length = 150
 
 [CHANGES]
 indent_size = 4
