editorconfig: Include the command used to normalize *.xml
The double asterisk seems unnecessary.

--- a/.editorconfig
+++ b/.editorconfig
@@ -18,6 +18,7 @@ indent_style = space
 indent_size = 3
 indent_style = space
 
-[**.xml]
+[*.xml]
+# xmllint --nsclean --encode UTF-8 --noent --format -
 indent_size = 2
 indent_style = space
